Move header styles to main.css to see if the shift in the nav items is fixed

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -225,3 +225,97 @@ img {
     overflow: hidden;
   }
 }
+/* Header
+---------------------------- */
+.main-header{
+	border-bottom:solid 1px #ccc;
+	padding-left:15px;
+	padding-right:15px;
+}
+.main-header--wrap{
+	display:flex;
+	align-items:center;
+	justify-content:space-between;
+	min-height:60px;
+}
+.main-nav--list{
+	margin:0;
+	padding:0;
+	list-style:none;
+}
+@media(max-width:1024px){
+	.main-nav{
+		position:fixed;
+		background:black;
+		top:0;
+		left:0;
+		right:0;
+		bottom:0;
+		width:100%;
+		height:100%;
+		z-index:10;
+		pointer-events:none;
+		opacity:0;
+		transition:opacity 0.2s ease;
+	}
+	.main-nav--toggle{
+		cursor: pointer;
+	}
+	.main-nav--toggle.active{
+		color:white;
+		z-index:11;
+	}
+	.main-nav--toggle.active + .main-nav{
+		pointer-events:all;
+		opacity:1;
+	}
+	.main-nav--list{
+		margin-top:30px;
+	}
+	.main-nav--item{
+
+	}
+	.main-nav--link{
+		padding:10px 15px;
+		color:white;
+		display:block;
+		text-align:center;
+		font-size:1.5em;
+	}
+	span.main-nav--link{
+		opacity:0.5;
+	}
+}
+@media(min-width:1025px){
+	.main-header{
+		padding-left:30px;
+		padding-right:30px;
+	}
+	.main-nav--toggle{
+		display:none;
+	}
+	.main-nav{
+		display:flex;
+		align-items:center;
+		justify-content:space-between;
+	}
+	.main-nav--list{
+		
+	}
+	.main-nav--item{
+		display:inline-block;
+	}
+	.main-nav--link{
+		padding:5px 8px;
+		color:black;
+		font-size:1em;
+		display:block;
+	}
+	span.main-nav--link{
+		opacity:0.5;
+	}
+}
+.logo{
+	font-weight:bold;
+	text-transform:uppercase;
+}
